--- a/atividades/atividade004-petshop/css/estilo.css
+++ b/atividades/atividade004-petshop/css/estilo.css
@@ -21,13 +21,18 @@ header {
 header h1 {
   font-weight: bold;
   text-align: right;
-  font-size: 6rem;
+  font-size: 5rem;
   margin: 3rem;
+  margin-bottom: 1rem;
 }
 
 header p {
-  font-weight: 300;
-  font-size: 1.2rem;
+  font-family: italic;
+  font-weight: bold;
+  text-align: right;
+  font-size: 3rem;
+  margin-top: 1rem;
+  margin: 3rem;
 }
 
 nav {
@@ -64,12 +69,18 @@ table {
   text-decoration: none;
 }
 
+#fonte {
+  font-family: Tahoma,sans-serif;
+}
+
 #fundo-header {
+  display: flex;
+  flex-direction: column;
   background-image: URL("../img/front-view-beautiful-dog-with-copy-space.png");
   background-size: cover;
   background-position: center;
   width: 100%;
-  min-height: 600px;
+  min-height: 500px;
   padding: 20px;
 }
 
@@ -100,12 +111,7 @@ table {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 60px 20px;
-}
-
-.parallax1 {
-  background-image: url("../img/front-view-beautiful-dog-with-copy-space.png");
-  min-height: auto;
+  width: 100%;
 }
 
 .parallax2 {
@@ -113,13 +119,6 @@ table {
   min-height: auto;
 }
 
-.fundo {
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding: 60px 20px;
-}
 .content {
   background-color: #ffffff;
   display: flex;
@@ -210,8 +209,6 @@ table {
   padding: 20px;
 }
 
-/* Produtos */
-
 .produtos {
   flex: 1;
   flex-direction: column;
@@ -264,11 +261,12 @@ h2 {
   transform: scale(1.05);
 }
 
-/* Barra lateral */
 .barra-lateral {
   padding: 20px;
   flex: 1;
   text-align: left;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 .barra-lateral p,
@@ -295,6 +293,7 @@ h3 {
 }
 
 .barra-lateral img {
+
   height: 300px;
   width: 100%;
   border-radius: 5px;
@@ -398,13 +397,35 @@ footer p {
 
 /* RESPONSIVIDADE */
 @media (max-width: 768px) {
+
+
+  #fundo-header img{
+    width: 20%;
+    height: 20%;
+  }
+
+  #fundo-header {
+    width: 100%;
+    min-height: 200px;
+    padding: 10px;
+  }
+  
+  #fundo-header h1{
+    font-size: 3.5rem;
+    text-align: center;
+  }
+
   header h1 {
     font-size: 1.5rem;
+    text-align: center;
+    align-items: center;
     margin: 2rem;
   }
 
   .navegacao {
     flex-direction: column;
+    min-width: 30%;
+    position: 0;
   }
 
   .navegacao a {
@@ -415,8 +436,13 @@ footer p {
     flex-direction: column;
   }
 
-  .parallax, .parallax2 h1 {
-    font-size: 1.2rem;
+
+  .parallax,
+  .parallax2 h1 {
+    align-items: center;
+    font-size: 2.5rem;
+    font-weight: bold;
+    margin: auto;
     width: auto;
     height: auto;
   }
@@ -424,6 +450,12 @@ footer p {
   .area-conteudo,
   .barra-lateral {
     width: 100%;
+  }
+
+  .barra-lateral img {
+    max-width: 90%;
+    margin-left: 20px;
+    margin-right: 20px;
   }
 
   .produtos-container {
