--- a/atividades_gerais/atividades_js/atividade004-condicionais_refatorada/css/style.css
+++ b/atividades_gerais/atividades_js/atividade004-condicionais_refatorada/css/style.css
@@ -5,9 +5,16 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #272525;
+  background-color: #dedede;
   padding: 30px;
   margin-top: 300px;
+}
+
+main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
 }
 
 h1, h2 {
@@ -24,8 +31,9 @@ input[type="number"] {
 }
 
 button {
-  background-color: #272525;
-  color: #f081faec;
+  font-weight: bold;
+  background-color: #493ee6;
+  color: #dedede;
   padding: 10px 16px;
   border: none;
   border-radius: 4px;
@@ -33,8 +41,8 @@ button {
 }
 
 button:hover {
-  background-color: #f081faec;
-  color: #272525;
+  background-color: #dedede;
+  color: #493ee6;
   box-shadow: 0 0 10px rgb(0, 0, 0);
 }
 
@@ -49,11 +57,10 @@ label {
 }
 
 .container {
-  max-width: 500px;
-  margin: auto;
-  background-color: #f081faec;
+  width: 300px; /* ou outro valor menor */
+  background-color: #dedede;
   padding: 20px;
-  box-shadow: 0 0 10px rgba(255, 0, 255, 0.966);
+  box-shadow: 0 0 10px rgba(116, 116, 116, 0.966);
   border-radius: 8px;
   margin-bottom: 30px;
 }
