--- a/atividades_gerais/atividades_js/atividade004-condicionais_refatorada/css/style.css
+++ b/atividades_gerais/atividades_js/atividade004-condicionais_refatorada/css/style.css
@@ -1,13 +1,14 @@
 * {
   padding: 0;
   margin: 0;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-body {
-  font-family: Arial, sans-serif;
-  background-color: #dedede;
+header {
+  background-color: #493ee6;
   padding: 30px;
-  margin-top: 300px;
+  text-align: center;
+  margin-bottom: 30px;
 }
 
 main {
