--- a/atividades_gerais/atividades_js/atividade004-condicionais_refatorado/css/style.css
+++ b/atividades_gerais/atividades_js/atividade004-condicionais_refatorado/css/style.css
@@ -16,10 +16,10 @@ body{
 }
 
 main {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+
   gap: 20px;
+  max-width: 900px;
+  margin: 0 auto;
 }
 
 h1, h2 {
@@ -60,15 +60,37 @@ label {
   font-weight: bold;
   color: #272525;
 }
-
-.container {
-  width: 300px; 
-  background-color: #dedede;
+.card-atividade {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px;
+  background-color: #ffffff;
   padding: 20px;
-  box-shadow: 0 0 10px rgba(116, 116, 116, 0.966);
-  border-radius: 8px;
-  margin-bottom: 30px;
+  margin: 20px auto;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(116, 116, 116, 0.3);
+  max-width: 900px;
+
 }
+
+.card-atividade article {
+  flex: 1;
+  min-width: 300px;
+  padding: 15px;
+  border-radius: 8px;
+}
+
+.card-atividade .descricao {
+  background-color: #f0f0f0;
+  border-left: 4px solid #3e87e6;
+}
+
+.card-atividade .atividade {
+  background-color: #dedede;
+}
+
+
 
 .erro {
   color: #e63e3e;
