--- a/atividades_gerais/atividades_js/atividade004-condicionais_refatorado/css/style.css
+++ b/atividades_gerais/atividades_js/atividade004-condicionais_refatorado/css/style.css
@@ -2,6 +2,11 @@
   padding: 0;
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #dedede;
 }
 
 header {
@@ -11,26 +16,50 @@ header {
   margin-bottom: 30px;
 }
 
-body{
-  background-color: #dedede
+h1, h2 {
+  color: #272525;
 }
 
 main {
-
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   gap: 20px;
-  max-width: 900px;
-  margin: 0 auto;
+  padding: 20px;
 }
 
-h1, h2 {
-    color: #272525;
+.card-atividade {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  gap: 20px;
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(116, 116, 116, 0.3);
+  width: 48%;
+  min-width: 400px;
+}
+
+.card-atividade article {
+  flex: 1;
+  padding: 15px;
+  border-radius: 8px;
+}
+
+.card-atividade .descricao {
+  background-color: #f0f0f0;
+  border-left: 4px solid #3e87e6;
+}
+
+.card-atividade .atividade {
+  background-color: #dedede;
 }
 
 input[type="number"] {
   padding: 8px;
   width: 100%;
   margin: 8px 0 16px;
-  box-sizing: border-box;
   border: 1px solid #ccc;
   border-radius: 4px;
 }
@@ -60,37 +89,6 @@ label {
   font-weight: bold;
   color: #272525;
 }
-.card-atividade {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 20px;
-  background-color: #ffffff;
-  padding: 20px;
-  margin: 20px auto;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(116, 116, 116, 0.3);
-  max-width: 900px;
-
-}
-
-.card-atividade article {
-  flex: 1;
-  min-width: 300px;
-  padding: 15px;
-  border-radius: 8px;
-}
-
-.card-atividade .descricao {
-  background-color: #f0f0f0;
-  border-left: 4px solid #3e87e6;
-}
-
-.card-atividade .atividade {
-  background-color: #dedede;
-}
-
-
 
 .erro {
   color: #e63e3e;
